2015-09-03  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2015-04-27  Dmitry Prokoptsev  <dprokoptsev@gmail.com>
		    Michael Hanselmann  <public@hansmi.ch>

	PR libstdc++/62258
	* libsupc++/eh_ptr.cc (rethrow_exception): Increment count of
	uncaught exceptions.
	* testsuite/18_support/exception_ptr/62258.cc: New.

2015-08-28  Tim Shen  <timshen@google.com>

	Backport from mainline
	2015-08-28  Tim Shen  <timshen@google.com>

	PR libstdc++/67362
	* include/bits/regex_scanner.tcc (_Scanner<>::_M_scan_normal):
	Always returns ordinary char token if the char isn't
	considered a special char.
	* testsuite/28_regex/regression.cc: New test file for collecting
	regression testcases from, typically, bugzilla.

2015-08-05  Tim Shen  <timshen@google.com>

	Backported from mainline
	2015-07-29  Tim Shen  <timshen@google.com>

	PR libstdc++/67015
	* include/bits/regex_compiler.h (_Compiler<>::_M_expression_term,
	_BracketMatcher<>::_M_add_collating_element): Change signature
	to make checking the and of bracket expression easier.
	* include/bits/regex_compiler.tcc (_Compiler<>::_M_expression_term):
	Treat '-' as a valid literal if it's at the end of bracket expression.
	* testsuite/28_regex/algorithms/regex_match/cstring_bracket_01.cc:
	New testcases.

2015-06-26  Release Manager

	* GCC 4.9.3 released.

2015-06-16  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/66200
	* configure.host (host_cpu): Add aarch64 case.
	* config/cpu/aarch64/atomic_word.h: New file.

2015-06-10  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2015-01-20  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/64650
	* include/experimental/optional (bad_optional_access): Add default
	constructor.
	* testsuite/experimental/optional/requirements.cc: Test for default
	constructor.

2015-06-08  Jonathan Wakely  <jwakely@redhat.com>

	Backported from mainline
	2015-06-01  Jonathan Wakely  <jwakely@redhat.com>
