@@ -1,3 +1,9 @@
+2015-10-02  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/65142
+	* src/c++11/random.cc (random_device::_M_getval()): Check read result
+	and retry after short reads.
+
 2015-09-03  Jonathan Wakely  <jwakely@redhat.com>
 
 	Backport from mainline
